--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -259,7 +259,7 @@
   }
 
   .loginx-buttons {
-    margin-top: 200px;
+    margin-top: 100px;
   }
 
   .loginx-background {
@@ -281,4 +281,18 @@
     width: 50%;
     height: 50%;
   }
+}
+
+
+
+
+
+
+
+
+.loginx-logo-img {
+  width: 120px;
+  height: auto;
+  display: block;
+  margin: 0 auto;
 }
